--- a/ERP/inventory/templates/Inventory/stock_movements.html
+++ b/ERP/inventory/templates/Inventory/stock_movements.html
@@ -1,4 +1,4 @@
-{% extends "inventory/_list_base.html" %}
+﻿{% extends "inventory/_list_base.html" %}
 {% load static %}
 
 {% block page_title %}Inventory Stock Movements{% endblock %}
